--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 <div id="mainwrap">
+Step 1:<a href="https://github.com/crocusii/portal/archive/refs/heads/main.zip">download the portal folder</a><br>
+Step 2: Host it here!
 
 <h1 id="maintitle">Serve folder</h1>
 <p>Serve a local folder of files in your browser for easy testing without having to run a server.</p>
@@ -37,19 +39,6 @@
 
 <h3>How does it work?</h3>
 <p>Click the big button at the top and choose a folder. Once chosen and any permission prompt approved, a link will appear. Click the link and it will open a new tab and load index.html if a file with that name exists, otherwise it will show the contents of the folder for browsing. This is particularly useful with HTML files, which are also able to load all sub-resources like they can on a normal web server, but this does not actually involve a HTTP server (it works using Service Workers). Note the provided link will only work so long as this page remains open &mdash; as soon as you close the page the link will stop working.</p>
-
-<p>You can also open this tab multiple times and host different folders simultaneously. Additional tabs will host at a different URL for accessing different folders. This page also works offline and is installable in supported browsers.</p>
-
-<h3>Limitations</h3>
-<p>A couple of known limitations are:</p>
-<ul>
-	<li>The files are served from a subfolder. Serving from the origin root is not supported as it complicates loading this page and supporting multiple hosts.</li>
-	<li>The hosted files cannot register their own service worker. This is because the browser enforces that the SW script is loaded from the network, where it will return 404.</li>
-</ul>
-<p>However since the vast majority of web APIs will work, this should support most client-side web content, such as HTML5 games, static websites, and so on.</p>
-
-<h3>Is my data kept private?</h3>
-<p>Yes. Your chosen files will not leave your computer. The files will not be accessible by anyone else, the provided link only works for you, and nothing is transmitted over a network while loading it. See the <a href="privacy-policy.html">privacy policy</a> for more information.</p>
 
 <h3>Who made this?</h3>
 <p>Hi, I'm <a href="https://twitter.com/ashleygullen">@AshleyGullen</a>, founder of Scirra and lead developer on <a href="https://www.construct.net/">Construct</a>.</p>
