--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
 <div id="mainwrap">
-Step 1:<a href="https://github.com/crocusii/portal/archive/refs/heads/main.zip">download the portal folder</a><br>
-Step 2: Host it here!
+Step 1:<a href="https://github.com/crocusii/portal/archive/refs/heads/main.zip">Download the portal folder.</a><br>
+Step 2: Extract it.<br>
+Step 3: Host it here!
 
 <h1 id="maintitle">Serve folder</h1>
 <p>Serve a local folder of files in your browser for easy testing without having to run a server.</p>
@@ -44,6 +45,7 @@ Step 2: Host it here!
 <p>Hi, I'm <a href="https://twitter.com/ashleygullen">@AshleyGullen</a>, founder of Scirra and lead developer on <a href="https://www.construct.net/">Construct</a>.</p>
 
 <p><em>v1.2 &mdash; last updated August 21st 2024 &mdash; <a href="https://github.com/AshleyScirra/servefolder.dev">View code on GitHub</a></em></p>
+
 </details>
 
 <script src="idb-keyval.js" defer></script>
