--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ Step 3: Host it here!
 
 <noscript><strong>This page requires JavaScript to work, but it looks like JavaScript is disabled. Please enable JavaScript and try again.</strong></noscript>
 
-<button id="pickfolder" hidden>Pick folder</button>
+<button id="pickfolder" hidden></button>
 <br>
-<button id="uselastfolder" hidden>Use last folder</button>
+<button id="uselastfolder" hidden></button>
 <input type="file" webkitdirectory id="inputfolder" hidden>
 
 <div id="hostinfo">
