--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf8">
 	<title>Serve folder for web development</title>
+	<link rel="icon" type="image/svg+xml" href="favicon.svg">
+	<link rel="icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" href="index.css">
 	<link rel="manifest" href="appmanifest.json">
 </head>
@@ -17,9 +19,9 @@ Step 3: Host it here!
 
 <noscript><strong>This page requires JavaScript to work, but it looks like JavaScript is disabled. Please enable JavaScript and try again.</strong></noscript>
 
-<button id="pickfolder" hidden></button>
+<button id="pickfolder" hidden>Pick folder</button>
 <br>
-<button id="uselastfolder" hidden></button>
+<button id="uselastfolder" hidden>Use last folder</button>
 <input type="file" webkitdirectory id="inputfolder" hidden>
 
 <div id="hostinfo">
