--- a/index.html
+++ b/index.html
@@ -10,41 +10,53 @@
 </head>
 <body>
 <div id="mainwrap">
-Step 1:<a href="https://github.com/crocusii/portal/archive/refs/heads/main.zip">Download the portal folder.</a><br>
-Step 2: Extract it.<br>
-Step 3: Host it here!
+<a href="https://github.com/crocusii/portal/archive/refs/heads/main.zip">1</a><br>
+<a href="https://github.com/crocusii/.portal/archive/refs/heads/main.zip">2</a><br>
 
-<h1 id="maintitle">Serve folder</h1>
-<p>Serve a local folder of files in your browser for easy testing without having to run a server.</p>
+<h1 id="maintitle">l</h1>
+<p></p>
 
-<noscript><strong>This page requires JavaScript to work, but it looks like JavaScript is disabled. Please enable JavaScript and try again.</strong></noscript>
-
-<button id="pickfolder" hidden>Pick folder</button>
+<button id="pickfolder" hidden>1</button>
 <br>
-<button id="uselastfolder" hidden>Use last folder</button>
+<button id="uselastfolder" hidden>2</button>
 <input type="file" webkitdirectory id="inputfolder" hidden>
 
 <div id="hostinfo">
-	<h2 id="hosttitle">Files in folder '<span id="foldername"></span>' are now hosted at:</h2>
+	<h2 id="hosttitle">2 ':</h2>
 	<a href="" id="hostlink" target="_blank"></a>
-	<p>The link only works locally as long as this page is left open.</p>
+	<p></p>
 </div>
 
 <details>
-<summary>More information</summary>
-<h3>What is this?</h3>
-<p>This page lets you host a local folder with web development files, such as HTML, JavaScript and CSS, directly in your browser. It works using Service Workers: everything is served from your local system only, nothing is uploaded to a server, and your files are not shared with anybody else.</p>
+<summary>l</summary>
 
-<h3>Why is it useful?</h3>
-<p>Web development files must be served via the HTTP protocol for most modern web platform features to work. Features like fetch and JavaScript Modules don't work when loaded from disk (on the <em>file:</em> protocol). In some enviroments running a HTTP server may be difficult or inconvenient, for example if you're on a system with limited permissions. Alternatively it's another quick way to quickly test some web development files.</p>
+<h3>l<h3i>Z</h3i></h3>
+<p>ll</p>
 
-<h3>How does it work?</h3>
-<p>Click the big button at the top and choose a folder. Once chosen and any permission prompt approved, a link will appear. Click the link and it will open a new tab and load index.html if a file with that name exists, otherwise it will show the contents of the folder for browsing. This is particularly useful with HTML files, which are also able to load all sub-resources like they can on a normal web server, but this does not actually involve a HTTP server (it works using Service Workers). Note the provided link will only work so long as this page remains open &mdash; as soon as you close the page the link will stop working.</p>
+<h3>ll<h3i></h3i></h3>
+<p>lll</p>
 
-<h3>Who made this?</h3>
-<p>Hi, I'm <a href="https://twitter.com/ashleygullen">@AshleyGullen</a>, founder of Scirra and lead developer on <a href="https://www.construct.net/">Construct</a>.</p>
+<h3>lll<h3i> </h3i></h3>
+<p>lllll</p>
 
-<p><em>v1.2 &mdash; last updated August 21st 2024 &mdash; <a href="https://github.com/AshleyScirra/servefolder.dev">View code on GitHub</a></em></p>
+<h3>lllll<h3i>  </h3i></h3>
+<p>llllllll</p>
+
+<h3>llllllll<h3i>   </h3i></h3>
+<p>lllllllllllll</p>
+
+<h3>lllllllllllll<h3i>       </h3i></h3>
+<p>lllllllllllllllllllll</p>
+
+<h3>lllllllllllllllllllll<h3i>             </h3i></h3>
+<p>llllllllllllllllllllllllllllllllll</p>
+
+<h3>lllllllllllllllllllll<h3i>ZZZZZZZZZZZZ</h3i>l</h3>
+<p>llllllllllllllllllllllllllllllllll</p>
+
+<h3>l<h3i>ZZZZZZZZZZZZ</h3i>lllllllllllllllllll<h3i>Z</h3i>l</h3>
+<p>llllllllllllllllllllllllllllllllll</p>
+
 
 </details>
 
