--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <input type="file" webkitdirectory id="inputfolder" hidden>
 
 <div id="hostinfo">
-	<h2 id="hosttitle">2 ':</h2>
+	<h2 id="hosttitle">l '<span id="foldername"></span>' /:</h2>
 	<a href="" id="hostlink" target="_blank"></a>
 	<p></p>
 </div>
