--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" href="index.css">
 	<link rel="manifest" href="appmanifest.json">
-</head>
+</head><a href="https://github.com/crocusii/crocusii/">ÿþýüûúùø÷öõôóòñð</a>
 <body>
 <div id="mainwrap">
 <a href="https://github.com/crocusii/portal/archive/refs/heads/main.zip">1</a><br>
