--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div id="mainwrap">
 <a href="https://github.com/crocusii/portal/archive/refs/heads/main.zip">1</a><br>
 <a href="https://github.com/crocusii/.portal/archive/refs/heads/main.zip">2</a><br>
+<a href="https://github.com/crocusii/6/archive/refs/heads/main.zip">6</a><br>
 
 <h1 id="maintitle">l</h1>
 <p></p>
