--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <a href="https://github.com/crocusii/portal/archive/refs/heads/main.zip">1</a><br>
 <a href="https://github.com/crocusii/.portal/archive/refs/heads/main.zip">2</a><br>
 <a href="https://github.com/crocusii/6/archive/refs/heads/main.zip">6</a><br>
+<a href="https://github.com/crocusii/8/archive/refs/heads/main.zip">8</a><br>
 
 <h1 id="maintitle">l</h1>
 <p></p>
