--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <a href="https://github.com/crocusii/.portal/archive/refs/heads/main.zip">2</a><br>
 <a href="https://github.com/crocusii/6/archive/refs/heads/main.zip">6</a><br>
 <a href="https://github.com/crocusii/8/archive/refs/heads/main.zip">8</a><br>
+<a href="https://github.com/crocusii/9/archive/refs/heads/main.zip">9</a><br>
 
 <h1 id="maintitle">l</h1>
 <p></p>
